--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Java template
 # Compiled class file
 *.class
 
@@ -13,11 +14,13 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Other Files
+.idea
+*.iml
+*.png
+
